# voicequant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-coverage.yml
examples/: inference_gateway.py  livekit_agent.py  pipecat_agent.py  quick_bench.py
src/voicequant/: __init__.py  _version.py  cli.py
src/voicequant/benchmarks/: __init__.py  report.py  runner.py  visualize.py
src/voicequant/benchmarks/prompts/: long_system.txt  medium_system.txt  short_system.txt
src/voicequant/benchmarks/prompts/conversations/: long_20_turn.json  medium_10_turn.json  short_5_turn.json
src/voicequant/benchmarks/prompts/tts/: test_sentences.json
src/voicequant/benchmarks/scenarios/: __init__.py  concurrent.py  multi_turn.py  quality.py  system_prompt.py  tool_calling.py  ttfb.py
src/voicequant/benchmarks/scenarios/tts/: __init__.py  concurrent.py  mos_quality.py  speaker_cache_hit.py  streaming_jitter.py  ttfa.py
src/voicequant/cache/: __init__.py  incremental.py  manager.py  session.py
src/voicequant/core/: __init__.py  attention.py  codebook.py  compress.py  protocol.py  validator.py  wrapper.py
src/voicequant/core/llm/: __init__.py  attention.py  codebook.py  compress.py  config.py  constants.py  decompress.py  engine.py  validator.py  wrapper.py
src/voicequant/core/stt/: __init__.py  compile.py  config.py  engine.py
src/voicequant/core/tts/: __init__.py  audio.py  config.py  engine.py  orpheus_adapter.py  speaker_cache.py  streaming.py
src/voicequant/deploy/: __init__.py  modal_deploy.py  runpod_handler.py
src/voicequant/deploy/templates/: Dockerfile  docker-compose.yml
src/voicequant/integrations/: __init__.py  async_wrappers.py  livekit_llm.py  livekit_stream.py  openai_compat.py
src/voicequant/server/: __init__.py  app.py  config.py  engine.py  metrics.py
src/voicequant/server/routes/: __init__.py  capacity.py  llm.py  stt.py  stt_stub.py  tts.py  tts_stub.py
tests/: conftest.py  test_attention.py  test_benchmarks.py  test_codebook.py  test_compress.py  test_decompress.py  test_end_to_end.py  test_engine_wrapper.py  test_metrics.py  test_session.py  test_truncate.py  test_validator.py  test_wrapper.py
tests/benchmarks/: test_benchmarks.py  test_tts_benchmarks.py
tests/core/llm/: conftest.py  test_attention.py  test_codebook.py  test_decompress.py  test_end_to_end.py  test_wrapper.py
tests/core/stt/: test_stt.py
tests/core/tts/: __init__.py  test_audio.py  test_multi_backend.py  test_orpheus_adapter.py  test_speaker_cache.py  test_streaming.py  test_tts_config.py  test_tts_engine.py
tests/server/: test_metrics.py  test_server_structure.py  test_tts_cli.py  test_tts_routes.py  test_tts_streaming_route.py
