[project]
name = "voicequant"
dynamic = ["version"]
description = "TurboQuant KV cache compression for voice AI inference - 5x more concurrent sessions on the same GPU"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Mahimai Raja", email = "hello@mahimai.ca"}]
keywords = [
    "turboquant", "kv-cache", "voice-ai", "livekit",
    "vllm", "quantization", "inference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "torch",
    "scipy",
]

[project.optional-dependencies]
serve = [
    "vllm>=0.8.0",
    "turboquant-gpu>=0.1.0",
    "torch>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
vllm-plugin = [
    "vllm>=0.8.0",
    "turboquant-vllm>=1.0.0",
]
bench = [
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "matplotlib>=3.8.0",
]
viz = ["matplotlib>=3.8.0"]
stt = [
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.0",
]
tts = [
    "kokoro-onnx>=0.3.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]
modal = ["modal>=0.70.0"]
runpod = ["runpod>=1.7.0"]
voice = [
    "voicequant[stt,tts]",
]
all = [
    "voicequant[serve,bench,stt,tts,modal]",
]

[project.scripts]
voicequant = "voicequant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["voicequant*"]

[project.urls]
Homepage = "https://github.com/mahimailabs/voicequant"
Repository = "https://github.com/mahimailabs/voicequant"
Issues = "https://github.com/mahimailabs/voicequant/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.4",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.coverage.run]
source = ["src/voicequant"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/voicequant/_version.py"

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voicequant.core.llm.*"
ignore_errors = true
